--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "cta-landing-next",
-  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "name": "cta-landing-next",
+  "version": "0.2.0",
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-astro"
+    ]
   },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.2.0"
+  "scripts": {
+    "build": "astro build",
+    "dev": "TAILWIND_MODE=watch astro dev",
+    "format": "prettier -w ./src",
+    "preview": "astro preview"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3",
-    "typescript": "4.7.4"
+    "@astrojs/tailwind": "^0.2.4",
+    "@types/node": "^18.0.4",
+    "astro": "^1.0.0-beta.70",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.1.1",
+    "typescript": "^4.7.4"
   }
 }
