--- a/package.json
+++ b/package.json
@@ -1,28 +1,45 @@
 {
-  "name": "cta-landing-next",
-  "version": "0.1.0",
+  "name": "cta-docs",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.2.0"
+    "@algolia/autocomplete-js": "^1.7.1",
+    "@algolia/client-search": "^4.13.1",
+    "@astrojs/vercel": "^0.4.0",
+    "@docsearch/css": "3",
+    "@docsearch/js": "3",
+    "@docsearch/react": "3",
+    "@types/react": "^17.0.45",
+    "dotenv": "^16.0.1",
+    "fenceparser": "^2.1.1",
+    "html-react-parser": "^3.0.1",
+    "instantsearch.css": "^7.4.5",
+    "marked": "^4.0.18"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3",
-    "typescript": "4.7.4"
+    "@astrojs/image": "^0.3.0",
+    "@astrojs/react": "^0.4.2",
+    "@astrojs/tailwind": "^0.2.5",
+    "@nanostores/react": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.4",
+    "@types/marked": "^4.0.3",
+    "@types/react-html-parser": "^2.0.2",
+    "@types/react-instantsearch-dom": "^6.12.3",
+    "algoliasearch": "^4.14.2",
+    "astro": "^1.0.0-rc.4",
+    "nanostores": "^0.6.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-instantsearch-dom": "^6.31.0",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.1.7"
   }
 }
